--- a/main.css
+++ b/main.css
@@ -9,17 +9,16 @@ body {
 body {
   width: 100%;
   height: 100vh;
-  background: url(assets/stone-ledge-mountain-open-people-lake-freedom-1010111-wallhere.com.jpg) no-repeat;
+  background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.2)), url(assets/stone-ledge-mountain-open-people-lake-freedom-1010111-wallhere.com.jpg) no-repeat;
   background-size: cover;
   color: #fff;
 }
 
 .wrapper {
-  padding-top: 4rem;
+  padding-top: 10rem;
   width: 90%;
   margin: 0 auto;
   text-align: center;
-  background: rgba(0,0,0,.1);
 }
 
 .quote {
